MDEV-6800 auth_socket plugin fails to build on OpenBSD with MariaDB 10.0.14

typo (thanks, Brad Smith!)